<resources>
    <string name="app_name">NZSE</string>
    <string name="ask_text">who are you?</string>
    <string name="sel_lang">English</string>
    <string name="estate_broker">I am a estate broker!</string>
    <string name="customer">I am a Customer!</string>
    <string name="list_immobilien">show inserts</string>
    <string name="list_saved">show saved</string>
    <string name="placeholder">placeholder</string>
    <string name="greetings_client">Hello Client!</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="reset_search">Reset</string>
    <string name="max_price">Max price: </string>
    <string name="max_price_amt" />
    <string-array name="group_by">
        <item>ascending price</item>
        <item>descending price</item>
        <item>newest</item>
        <item>oldest</item>
    </string-array>
    <string name="prompt_sort">"Sort by: "</string>
    <string name="animals_permitted">Animals allowed</string>
    <string name="no_smoker">no smoker</string>
    <string name="immobilepicture">ImmobilePicture</string>
    <string name="DescriptionRow">Description: </string>
    <string name="change">change</string>
    <string name="buy_rent">Buy/Rent:</string>
    <string name="room">Room:</string>
    <string name="price">Price:</string>
    <string name="greetings_makler">Welcome to your Office!</string>
    <string name="add_new">Insert new estate</string>
    <string name="createNew">Create new Estate</string>
    <string name="done">Done!</string>
    <string name="provison">"Provision: "</string>
</resources>
