<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hello_makler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="30dp"
        android:textSize="30dp"
        android:text="@string/greetings_makler" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#37AEE4"
        android:backgroundTint="#FEFBDE"
        android:padding="20dp">

        <TextView
            android:id="@+id/max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_price"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/display_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_price_amt"
            android:textSize="20dp"/>

    </LinearLayout>



    <SeekBar
        android:id="@+id/simpleSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="10000"
        android:padding="10dp"/>




    <CheckBox
        android:id="@+id/checkbox_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/animals_permitted"
        android:padding="20dp"
        android:textSize="15dp"/>

    <CheckBox
        android:id="@+id/checkbox_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/no_smoker"
        android:padding="20dp"
        android:textSize="15dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/radiobuttons">


            <RadioButton
                android:id="@+id/radio_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="20dp"
                android:text="@string/rent"
                android:checked="true"
                android:textSize="15dp"/>

            <RadioButton
                android:id="@+id/radio_ninjas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:padding="20dp"
                android:text="@string/buy"
                android:textSize="15dp"/>
            <Spinner
                android:id="@+id/spinner_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/group_by"
                android:prompt="@string/prompt_sort"
                android:textSize="15dp"/>
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_list_immobilien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/list_immobilien" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_list_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/list_saved" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/reset_search" />

    </LinearLayout>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:text="@string/add_new" />
</androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>

